--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:src="@drawable/logo" />
 
             <TextView
@@ -31,49 +31,49 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/imagechangetpassword"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:text="Change password"
                 android:textColor="#ffffff"
-                android:textSize="40dip" />
+                android:textSize="@dimen/_30ssp" />
 
         </GridLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:background="#000000"
-            android:padding="16dp">
+            android:orientation="vertical"
+            android:padding="@dimen/_16sdp">
 
             <EditText
                 android:id="@+id/txtnewpass"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50ssp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/password"
-                android:drawablePadding="16sp"
+                android:drawablePadding="@dimen/_16sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="New password"
                 android:inputType="textPassword"
-                android:padding="15dp" />
+                android:padding="@dimen/_15sdp" />
 
             <EditText
                 android:id="@+id/txtconfirmpass"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50ssp"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/_eye"
-                android:drawablePadding="16sp"
+                android:drawablePadding="@dimen/_16sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="Confirm password"
                 android:inputType="textPassword"
-                android:padding="15dp" />
+                android:padding="@dimen/_15sdp" />
 
         </LinearLayout>
 
@@ -86,13 +86,13 @@
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_changepassword"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginBottom="10dp"
+                android:layout_height="@dimen/_70sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
                 android:background="@android:color/holo_orange_dark"
-                android:padding="20dp"
+                android:padding="@dimen/_20sdp"
                 android:text="Confirm"
                 android:textAllCaps="false"
-                android:textSize="20dp" />
+                android:textSize="@dimen/_20ssp" />
 
         </LinearLayout>
 
