--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:src="@drawable/logo" />
 
             <TextView
@@ -31,10 +31,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/imagelogin"
                 android:layout_gravity="center"
-                android:layout_margin="20dp"
+                android:layout_margin="@dimen/_20sdp"
                 android:text="Get involved"
                 android:textColor="#ffffff"
-                android:textSize="40dip" />
+                android:textSize="@dimen/_40ssp" />
 
         </GridLayout>
 
@@ -43,36 +43,36 @@
             android:layout_height="wrap_content"
             android:background="#000000"
             android:orientation="vertical"
-            android:padding="8dp">
+            android:padding="@dimen/_8sdp">
 
             <EditText
                 android:id="@+id/txtusernamelogin"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50sdp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/usernameimage"
-                android:drawablePadding="16sp"
+                android:drawablePadding="@dimen/_16sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="User name"
                 android:inputType="textPersonName"
-                android:padding="15dp" />
+                android:padding="@dimen/_15sdp" />
 
             <EditText
                 android:id="@+id/txtpasswordlogin"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50sdp"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/password"
-                android:drawablePadding="16sp"
+                android:drawablePadding="@dimen/_16sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:padding="15dp" />
+                android:padding="@dimen/_15sdp" />
 
         </LinearLayout>
 
@@ -89,7 +89,7 @@
                 android:gravity="right"
                 android:text="Forget Passowrd"
                 android:textColor="@android:color/holo_orange_dark"
-                android:textSize="20dip" />
+                android:textSize="@dimen/_16ssp" />
         </LinearLayout>
 
         <LinearLayout
@@ -100,15 +100,15 @@
 
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_login"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_100sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/oragnecircal"
-                android:padding="20dp"
+                android:padding="@dimen/_20sdp"
                 android:text="->"
                 android:textAllCaps="false"
-                android:textSize="20dp" />
+                android:textSize="@dimen/_20sdp" />
 
         </LinearLayout>
 
@@ -120,12 +120,12 @@
                 android:id="@+id/txt_toregister"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginBottom="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:gravity="center"
                 android:text="Don't have ana accounts?Sign Up"
                 android:textColor="@android:color/holo_orange_dark"
-                android:textSize="18dip" />
+                android:textSize="@dimen/_18ssp" />
         </LinearLayout>
 
     </LinearLayout>
