--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,16 +14,16 @@
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="@dimen/_20sdp"
             android:layout_weight="10"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageregister"
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_150sdp"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:src="@drawable/camera" />
 
         </GridLayout>
@@ -33,50 +33,50 @@
             android:layout_height="wrap_content"
             android:background="#000000"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="@dimen/_8sdp">
 
             <EditText
                 android:id="@+id/txtusernameregister"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50sdp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/usernameimage"
-                android:drawablePadding="16sp"
+                android:drawablePadding="@dimen/_16sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="Username"
                 android:inputType="textPersonName"
-                android:padding="15dp" />
+                android:padding="@dimen/_15sdp" />
 
             <EditText
                 android:id="@+id/txtpasswordregister"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50sdp"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/password"
-                android:drawablePadding="16sp"
+                android:drawablePadding="@dimen/_16sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:padding="15dp" />
+                android:padding="@dimen/_15sdp" />
 
             <EditText
                 android:id="@+id/txtemailregister"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50sdp"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/message"
-                android:drawablePadding="16sp"
+                android:drawablePadding="@dimen/_16sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
-                android:padding="15dp" />
+                android:padding="@dimen/_15sdp" />
 
         </LinearLayout>
 
@@ -89,13 +89,13 @@
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_register"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginBottom="20dp"
+                android:layout_height="@dimen/_70sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
                 android:background="@android:color/holo_orange_dark"
-                android:padding="20dp"
+                android:padding="@dimen/_20sdp"
                 android:text="Sign Up"
                 android:textAllCaps="false"
-                android:textSize="20dp" />
+                android:textSize="@dimen/_20ssp" />
 
         </LinearLayout>
 
@@ -122,14 +122,11 @@
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_login_facebok"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:background="#FF0D39F8"
-                android:padding="20dp"
-                android:text="Login as Facebook"
-                android:textAllCaps="false"
-                android:textSize="20dp" />
+                android:layout_height="@dimen/_70sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:background="@drawable/facebook"
+                android:padding="@dimen/_20sdp" />
 
         </LinearLayout>
     </LinearLayout>
