--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:src="@drawable/logo" />
 
             <TextView
@@ -31,10 +31,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/imageresetpassword"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:text="Forget password?"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:text="Forget password"
                 android:textColor="#ffffff"
-                android:textSize="40dip" />
+                android:textSize="@dimen/_30ssp" />
 
             <TextView
                 android:id="@+id/textcanreset"
@@ -42,10 +42,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/imageresetpassword"
                 android:layout_gravity="center"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="@dimen/_30sdp"
                 android:text="you can reset password."
                 android:textColor="@android:color/holo_orange_dark"
-                android:textSize="20sp" />
+                android:textSize="@dimen/_16ssp" />
 
         </GridLayout>
 
@@ -54,22 +54,22 @@
             android:layout_height="wrap_content"
             android:background="#000000"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="@dimen/_8sdp">
 
             <EditText
                 android:id="@+id/txtemailresetpassword"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50sdp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/message"
-                android:drawablePadding="16sp"
+                android:drawablePadding="@dimen/_16sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="Enter your email"
                 android:inputType="textEmailAddress"
-                android:padding="15dp" />
+                android:padding="@dimen/_15sdp" />
 
         </LinearLayout>
 
@@ -82,13 +82,13 @@
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_resetpassword"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginBottom="10dp"
+                android:layout_height="@dimen/_70sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 android:background="@android:color/holo_orange_dark"
-                android:padding="20dp"
+                android:padding="@dimen/_20sdp"
                 android:text="Request password reset"
                 android:textAllCaps="false"
-                android:textSize="20dp" />
+                android:textSize="@dimen/_20ssp" />
 
         </LinearLayout>
 
