--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundall"
+    android:background="@color/bottom_black"
     tools:context="com.example.amr.sunbula.HomeActivity">
 
     <android.support.design.widget.BottomNavigationView
