--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -44,7 +44,7 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/_30sdp"
                 android:text="you can reset password."
-                android:textColor="@android:color/holo_orange_dark"
+                android:textColor="@color/colorAccent"
                 android:textSize="@dimen/_16ssp" />
 
         </GridLayout>
@@ -84,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_70sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
-                android:background="@android:color/holo_orange_dark"
+                android:background="@color/colorAccent"
                 android:padding="@dimen/_20sdp"
                 android:text="Request password reset"
                 android:textAllCaps="false"
