--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -42,7 +42,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#000000"
+            android:background="@color/colorPrimary"
             android:orientation="vertical"
             android:padding="@dimen/_16sdp">
 
@@ -88,7 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_70sdp"
                 android:layout_marginBottom="@dimen/_20sdp"
-                android:background="@android:color/holo_orange_dark"
+                android:background="@color/colorAccent"
                 android:padding="@dimen/_20sdp"
                 android:text="Confirm"
                 android:textAllCaps="false"
