--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -46,7 +46,7 @@
                 android:layout_marginLeft="@dimen/_20sdp"
                 android:layout_marginRight="@dimen/_20sdp"
                 android:text="In order to continue. you must confirm your email address :"
-                android:textColor="@android:color/holo_orange_dark"
+                android:textColor="@color/colorAccent"
                 android:textSize="@dimen/_16ssp" />
 
         </GridLayout>
@@ -86,7 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_70sdp"
                 android:layout_marginBottom="@dimen/_20sdp"
-                android:background="@android:color/holo_orange_dark"
+                android:background="@color/colorAccent"
                 android:padding="@dimen/_20sdp"
                 android:text="Continue"
                 android:textAllCaps="false"
