--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:text="Forget Passowrd"
-                android:textColor="@android:color/holo_orange_dark"
+                android:textColor="@color/colorAccent"
                 android:textSize="@dimen/_16ssp" />
         </LinearLayout>
 
@@ -122,7 +122,7 @@
                 android:layout_marginTop="@dimen/_20sdp"
                 android:gravity="center"
                 android:text="Don't have ana accounts?Sign Up"
-                android:textColor="@android:color/holo_orange_dark"
+                android:textColor="@color/colorAccent"
                 android:textSize="@dimen/_18ssp" />
         </LinearLayout>
 
