--- a/app/src/main/res/layout/fragment_all_profile.xml
+++ b/app/src/main/res/layout/fragment_all_profile.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundall"
+    android:background="#ffffff"
     tools:context="com.example.amr.sunbula.Fragment.AllProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="All"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="@dimen/_30ssp" />
 
 </RelativeLayout>
