--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,7 +19,7 @@
             android:id="@+id/toolbar_profile"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/bottom_black"
+            android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
@@ -31,8 +31,8 @@
 
         <ImageView
             android:id="@+id/image_profile"
-            android:layout_width="@dimen/_120sdp"
-            android:layout_height="@dimen/_120sdp"
+            android:layout_width="@dimen/_130sdp"
+            android:layout_height="@dimen/_130sdp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             app:srcCompat="@drawable/profile_pic" />
@@ -41,23 +41,21 @@
             android:id="@+id/image_figure2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/btn_heart_likes"
-            android:layout_alignRight="@+id/btn_heart_likes"
-            android:layout_alignTop="@+id/image_profile"
-            android:layout_marginEnd="@dimen/_56sdp"
-            android:layout_marginRight="@dimen/_56sdp"
-            app:srcCompat="@drawable/figure_2" />
+            app:srcCompat="@drawable/figure_2"
+            android:layout_below="@+id/text_reviews_profile"
+            android:layout_alignLeft="@+id/text_reviews_profile"
+            android:layout_alignStart="@+id/text_reviews_profile"
+            android:layout_marginLeft="@dimen/_11sdp"
+            android:layout_marginStart="@dimen/_11sdp" />
 
         <ImageView
             android:id="@+id/imagefigure1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/image_figure2"
-            android:layout_marginLeft="@dimen/_67sdp"
-            android:layout_marginStart="@dimen/_67sdp"
-            app:srcCompat="@drawable/figure_1" />
+            app:srcCompat="@drawable/figure_1"
+            android:layout_below="@+id/text_causes_profile"
+            android:layout_alignLeft="@+id/text_history_profile"
+            android:layout_alignStart="@+id/text_history_profile" />
 
         <ImageView
             android:id="@+id/imagefigure3"
@@ -91,8 +89,8 @@
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="22dp"
-            android:layout_marginStart="22dp"
+            android:layout_marginLeft="@dimen/_22sdp"
+            android:layout_marginStart="@dimen/_22sdp"
             android:layout_toEndOf="@+id/image_profile"
             android:layout_toRightOf="@+id/image_profile"
             android:background="@drawable/like_heart" />
@@ -103,8 +101,8 @@
             android:layout_height="@dimen/_40sdp"
             android:layout_alignBaseline="@+id/btn_heart_likes"
             android:layout_alignBottom="@+id/btn_heart_likes"
-            android:layout_marginEnd="23dp"
-            android:layout_marginRight="23dp"
+            android:layout_marginEnd="@dimen/_23sdp"
+            android:layout_marginRight="@dimen/_23sdp"
             android:layout_toLeftOf="@+id/image_profile"
             android:layout_toStartOf="@+id/image_profile"
             android:background="@drawable/add_cause" />
@@ -161,13 +159,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#ffffff"
-            android:elevation="6dp"
+            android:elevation="@dimen/_6sdp"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
-            android:layout_marginTop="@dimen/_1sdp"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_below="@id/tab_layout"
