--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#888484</color>
-    <color name="colorPrimaryDark">#888484</color>
-    <color name="colorAccent">#888484</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#ffa500</color>
 
     <color name="tab_disable">#979797</color>
     <color name="tab_enable">#FFFFFF</color>
-    <color name="tab_checked">#F3CD70</color>
+
+    <color name="tab_checked">#ffa500</color>
     <color name="tab_unchecked">#FFFFFF</color>
 
-    <color name="bottom_black">#000000</color>
 </resources>
