--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,100 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.ChangePasswordActivity">
 
+    <ImageView
+        android:id="@+id/imagechangetpassword"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
+        android:layout_gravity="center"
+        android:src="@drawable/logo"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp" />
+
+    <TextView
+        android:id="@+id/textchangepassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imagechangetpassword"
+        android:layout_gravity="center"
+        android:text="Change password"
+        android:textColor="#ffffff"
+        android:textSize="@dimen/_30ssp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imagechangetpassword" />
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:background="#BB000000"
+        android:orientation="vertical"
+        android:padding="@dimen/_16sdp"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/linearLayout2"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/textchangepassword">
 
-        <GridLayout
+        <EditText
+            android:id="@+id/txtnewpass"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="10"
-            android:orientation="vertical">
+            android:layout_height="@dimen/_50ssp"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:drawableLeft="@drawable/password"
+            android:drawablePadding="@dimen/_15sdp"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="New password"
+            android:inputType="textPassword"
+            android:padding="@dimen/_15sdp" />
 
-            <ImageView
-                android:id="@+id/imagechangetpassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:src="@drawable/logo" />
-
-            <TextView
-                android:id="@+id/textchangepassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imagechangetpassword"
-                android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:text="Change password"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/_30ssp" />
-
-        </GridLayout>
-
-        <LinearLayout
+        <EditText
+            android:id="@+id/txtconfirmpass"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#BB000000"
-            android:orientation="vertical"
-            android:padding="@dimen/_16sdp">
-
-            <EditText
-                android:id="@+id/txtnewpass"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_50ssp"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:drawableLeft="@drawable/password"
-                android:drawablePadding="@dimen/_15sdp"
-                android:ems="10"
-                android:gravity="left"
-                android:hint="New password"
-                android:inputType="textPassword"
-                android:padding="@dimen/_15sdp" />
-
-            <EditText
-                android:id="@+id/txtconfirmpass"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_50ssp"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:drawableLeft="@drawable/_eye"
-                android:drawablePadding="@dimen/_15sdp"
-                android:ems="10"
-                android:gravity="left"
-                android:hint="Confirm password"
-                android:inputType="textPassword"
-                android:padding="@dimen/_15sdp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/btn_changepassword"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_70sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
-                android:background="@color/colorAccent"
-                android:padding="@dimen/_20sdp"
-                android:text="Confirm"
-                android:textAllCaps="false"
-                android:textSize="@dimen/_20ssp" />
-
-        </LinearLayout>
+            android:layout_height="@dimen/_50ssp"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:drawableLeft="@drawable/_eye"
+            android:drawablePadding="@dimen/_15sdp"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="Confirm password"
+            android:inputType="textPassword"
+            android:padding="@dimen/_15sdp" />
 
     </LinearLayout>
-</ScrollView>
+
+    <Button
+        android:id="@+id/btn_changepassword"
+        android:layout_width="368dp"
+        android:layout_height="84dp"
+        android:background="@color/colorAccent"
+        android:padding="@dimen/_20sdp"
+        android:text="Confirm"
+        android:textAllCaps="false"
+        android:textSize="@dimen/_20ssp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.0" />
+
+</android.support.constraint.ConstraintLayout>
