--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -1,98 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.ConfirmEmailActivity">
 
+    <ImageView
+        android:id="@+id/imageconfirm"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
+        android:layout_gravity="center"
+        android:src="@drawable/logo"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp" />
+
+    <TextView
+        android:id="@+id/textconfirmcode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageconfirm"
+        android:layout_gravity="center"
+        android:text="Confirm code"
+        android:textColor="#ffffff"
+        android:textSize="@dimen/_30ssp"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageconfirm" />
+
+    <TextView
+        android:id="@+id/textcontinueconfirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageconfirm"
+        android:layout_gravity="center"
+        android:text="In order to continue. you must confirm your email address :"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/_16ssp"
+        android:layout_marginRight="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textconfirmcode" />
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:background="#BB000000"
+        android:orientation="vertical"
+        android:padding="@dimen/_8sdp"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/linearLayout3"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/textcontinueconfirm">
 
-        <GridLayout
+        <EditText
+            android:id="@+id/txtconfirmcontinue"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="10"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageconfirm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:src="@drawable/logo" />
-
-            <TextView
-                android:id="@+id/textconfirmcode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imageconfirm"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:text="Confirm code"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/_30ssp" />
-
-            <TextView
-                android:id="@+id/textcontinueconfirm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imageconfirm"
-                android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/_30sdp"
-                android:layout_marginLeft="@dimen/_20sdp"
-                android:layout_marginRight="@dimen/_20sdp"
-                android:text="In order to continue. you must confirm your email address :"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/_16ssp" />
-
-        </GridLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#BB000000"
-            android:orientation="vertical"
-            android:padding="@dimen/_8sdp">
-
-            <EditText
-                android:id="@+id/txtconfirmcontinue"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_50ssp"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:drawableLeft="@drawable/_eye"
-                android:drawablePadding="@dimen/_15sdp"
-                android:ems="10"
-                android:gravity="left"
-                android:hint="Enter your confirm code"
-                android:inputType="text"
-                android:padding="@dimen/_15sdp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/btn_continue"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_70sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
-                android:background="@color/colorAccent"
-                android:padding="@dimen/_20sdp"
-                android:text="Continue"
-                android:textAllCaps="false"
-                android:textSize="@dimen/_20ssp" />
-
-        </LinearLayout>
+            android:layout_height="@dimen/_50ssp"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:drawableLeft="@drawable/_eye"
+            android:drawablePadding="@dimen/_15sdp"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="Enter your confirm code"
+            android:inputType="text"
+            android:padding="@dimen/_15sdp" />
 
     </LinearLayout>
-</ScrollView>
+
+    <Button
+        android:id="@+id/btn_continue"
+        android:layout_width="368dp"
+        android:layout_height="84dp"
+        android:background="@color/colorAccent"
+        android:padding="@dimen/_20sdp"
+        android:text="Continue"
+        android:textAllCaps="false"
+        android:textSize="@dimen/_20ssp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.0" />
+
+</android.support.constraint.ConstraintLayout>
