--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,132 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.LoginActivity">
 
+    <ImageView
+        android:id="@+id/imagelogin"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textlogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imagelogin"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/_20sdp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:text="Get involved"
+        android:textColor="#ffffff"
+        android:textSize="@dimen/_30ssp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/imagelogin"
+        app:layout_constraintHorizontal_bias="0.502" />
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:id="@+id/linearLayout"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:background="#BB000000"
+        android:orientation="vertical"
+        android:padding="@dimen/_8sdp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
-        <GridLayout
+        <EditText
+            android:id="@+id/txtusernamelogin"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="10"
-            android:orientation="vertical">
+            android:layout_height="@dimen/_50sdp"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:drawableLeft="@drawable/usernameimage"
+            android:drawablePadding="@dimen/_15sdp"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="User name"
+            android:inputType="textPersonName"
+            android:padding="@dimen/_15sdp" />
 
-            <ImageView
-                android:id="@+id/imagelogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:src="@drawable/logo" />
-
-            <TextView
-                android:id="@+id/textlogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imagelogin"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/_20sdp"
-                android:text="Get involved"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/_30ssp" />
-
-        </GridLayout>
-
-        <LinearLayout
+        <EditText
+            android:id="@+id/txtpasswordlogin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#BB000000"
-            android:orientation="vertical"
-            android:padding="@dimen/_8sdp">
-
-            <EditText
-                android:id="@+id/txtusernamelogin"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sdp"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:drawableLeft="@drawable/usernameimage"
-                android:drawablePadding="@dimen/_15sdp"
-                android:ems="10"
-                android:gravity="left"
-                android:hint="User name"
-                android:inputType="textPersonName"
-                android:padding="@dimen/_15sdp" />
-
-            <EditText
-                android:id="@+id/txtpasswordlogin"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sdp"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:drawableLeft="@drawable/password"
-                android:drawablePadding="@dimen/_15sdp"
-                android:ems="10"
-                android:gravity="left"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:padding="@dimen/_15sdp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:orientation="vertical"
-            android:padding="@dimen/_8sdp">
-
-            <TextView
-                android:id="@+id/text_forget"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Forget Passowrd"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/_16ssp" />
-            <!--android:visibility="invisible" -->
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageButton
-                android:id="@+id/btn_login"
-                android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_100sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/oragnecircal"
-                android:padding="@dimen/_20sdp"
-                android:src="@drawable/download_right" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/txt_toregister"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:gravity="center"
-                android:text="Don't have ana accounts?Sign Up"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/_18ssp" />
-        </LinearLayout>
+            android:layout_height="@dimen/_50sdp"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:drawableLeft="@drawable/password"
+            android:drawablePadding="@dimen/_15sdp"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:padding="@dimen/_15sdp" />
 
     </LinearLayout>
-</ScrollView>
+
+    <TextView
+        android:id="@+id/text_forget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="0dp"
+        android:text="Forget Passowrd"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/_13ssp"
+        app:layout_constraintLeft_toRightOf="@+id/btn_login"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_login" />
+    <!--android:visibility="invisible" -->
+
+    <ImageButton
+        android:id="@+id/btn_login"
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="@dimen/_100sdp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/oragnecircal"
+        android:padding="@dimen/_20sdp"
+        android:src="@drawable/download_right"
+        app:layout_constraintBottom_toTopOf="@+id/txt_toregister"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_toregister"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="Don't have ana accounts?Sign Up"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/_18ssp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+</android.support.constraint.ConstraintLayout>
