--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -1,96 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.ResetPasswordActivity">
 
+    <ImageView
+        android:id="@+id/imageresetpassword"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
+        android:layout_gravity="center"
+        android:src="@drawable/logo"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp" />
+
+    <TextView
+        android:id="@+id/textforgetpassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageresetpassword"
+        android:layout_gravity="center"
+        android:text="Forget password"
+        android:textColor="#ffffff"
+        android:textSize="@dimen/_30ssp"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageresetpassword" />
+
+    <TextView
+        android:id="@+id/textcanreset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="you can reset password."
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/_16ssp"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/textforgetpassword" />
+
+    <Button
+        android:id="@+id/btn_resetpassword"
+        android:layout_width="368dp"
+        android:layout_height="72dp"
+        android:background="@color/colorAccent"
+        android:text="Request password reset"
+        android:textAllCaps="false"
+        android:textSize="@dimen/_20ssp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
+        app:layout_constraintVertical_bias="0.0" />
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:id="@+id/linearLayout5"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="40dp"
+        android:background="#BB000000"
+        android:orientation="vertical"
+        android:padding="@dimen/_8sdp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textcanreset">
 
-        <GridLayout
+        <EditText
+            android:id="@+id/txtemailresetpassword"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="10"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageresetpassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:src="@drawable/logo" />
-
-            <TextView
-                android:id="@+id/textforgetpassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imageresetpassword"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:text="Forget password"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/_30ssp" />
-
-            <TextView
-                android:id="@+id/textcanreset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imageresetpassword"
-                android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/_30sdp"
-                android:text="you can reset password."
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/_16ssp" />
-
-        </GridLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#BB000000"
-            android:orientation="vertical"
-            android:padding="@dimen/_8sdp">
-
-            <EditText
-                android:id="@+id/txtemailresetpassword"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sdp"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:drawableLeft="@drawable/message"
-                android:drawablePadding="@dimen/_15sdp"
-                android:ems="10"
-                android:gravity="left"
-                android:hint="Enter your email"
-                android:inputType="textEmailAddress"
-                android:padding="@dimen/_15sdp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/btn_resetpassword"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_70sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:background="@color/colorAccent"
-                android:padding="@dimen/_20sdp"
-                android:text="Request password reset"
-                android:textAllCaps="false"
-                android:textSize="@dimen/_20ssp" />
-
-        </LinearLayout>
+            android:layout_height="@dimen/_50sdp"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:drawableLeft="@drawable/message"
+            android:drawablePadding="@dimen/_15sdp"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="Enter your email"
+            android:inputType="textEmailAddress"
+            android:padding="@dimen/_15sdp" />
 
     </LinearLayout>
-</ScrollView>
+
+</android.support.constraint.ConstraintLayout>
