--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,146 +9,145 @@
     android:weightSum="2"
     tools:context="com.example.amr.sunbula.Fragment.ProfileFragment">
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <ScrollView
-            android:id="@+id/scroll"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:fillViewport="true">
+        <ImageView
+            android:id="@+id/image_profile"
+            android:layout_width="@dimen/_130sdp"
+            android:layout_height="@dimen/_130sdp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.421"
+            app:srcCompat="@drawable/profile_pic" />
 
-            <RelativeLayout
-                android:id="@+id/container"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/username_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="10dp"
+            android:text="Rossy Loard"
+            android:textSize="@dimen/_20ssp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_profile"
+            app:layout_constraintVertical_bias="1.0" />
 
-                <ImageView
-                    android:id="@+id/image_profile"
-                    android:layout_width="@dimen/_130sdp"
-                    android:layout_height="@dimen/_130sdp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    app:srcCompat="@drawable/profile_pic" />
+        <TextView
+            android:id="@+id/text_reviews_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/image_profile"
+            android:layout_marginRight="37dp"
+            android:layout_marginTop="16dp"
+            android:text="192k Reviews"
+            android:textSize="@dimen/_15ssp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/image_figure2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/text_location_profile"
-                    android:layout_alignRight="@+id/text_location_profile"
-                    android:layout_below="@+id/text_reviews_profile"
-                    android:layout_marginEnd="@dimen/_14sdp"
-                    android:layout_marginRight="@dimen/_14sdp"
-                    app:srcCompat="@drawable/figure_2" />
+        <TextView
+            android:id="@+id/text_causes_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/image_profile"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="@dimen/_23sdp"
+            android:layout_marginTop="16dp"
+            android:text="268k My causes"
+            android:textSize="@dimen/_15ssp"
+            app:layout_constraintHorizontal_bias="0.115"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/text_reviews_profile"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
-                <ImageView
-                    android:id="@+id/imagefigure1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/text_history_profile"
-                    android:layout_alignStart="@+id/text_history_profile"
-                    android:layout_below="@+id/text_causes_profile"
-                    android:layout_marginLeft="@dimen/_11sdp"
-                    android:layout_marginStart="@dimen/_11sdp"
-                    app:srcCompat="@drawable/figure_1" />
+        <TextView
+            android:id="@+id/text_location_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/image_profile"
+            android:layout_marginBottom="31dp"
+            android:layout_marginRight="56dp"
+            android:layout_toEndOf="@+id/username_profile"
+            android:layout_toRightOf="@+id/username_profile"
+            android:text="Location"
+            android:textSize="@dimen/_15ssp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
 
-                <ImageView
-                    android:id="@+id/imagefigure3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/text_location_profile"
-                    android:layout_alignLeft="@+id/image_figure2"
-                    android:layout_alignStart="@+id/image_figure2"
-                    app:srcCompat="@drawable/figure_3" />
+        <TextView
+            android:id="@+id/text_history_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="31dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginRight="97dp"
+            android:layout_toLeftOf="@+id/image_profile"
+            android:layout_toStartOf="@+id/image_profile"
+            android:text="History"
+            android:textSize="@dimen/_15ssp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.376"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/text_location_profile" />
 
-                <ImageView
-                    android:id="@+id/imagefigure4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/image_profile"
-                    android:layout_alignLeft="@+id/imagefigure1"
-                    android:layout_alignStart="@+id/imagefigure1"
-                    app:srcCompat="@drawable/figure4" />
+        <Button
+            android:id="@+id/btn_add_cause"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/add_cause"
+            app:layout_constraintBottom_toTopOf="@+id/text_location_profile"
+            app:layout_constraintHorizontal_bias="0.789"
+            app:layout_constraintLeft_toRightOf="@+id/image_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_reviews_profile"
+            app:layout_constraintVertical_bias="0.564" />
 
-                <TextView
-                    android:id="@+id/username_profile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="Rossy Loard"
-                    android:textSize="@dimen/_20ssp" />
+        <Button
+            android:id="@+id/btn_heart"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/like_heart"
+            app:layout_constraintBottom_toTopOf="@+id/text_history_profile"
+            app:layout_constraintHorizontal_bias="0.21"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/image_profile"
+            app:layout_constraintTop_toBottomOf="@+id/text_causes_profile"
+            app:layout_constraintVertical_bias="0.564" />
 
-                <TextView
-                    android:id="@+id/text_reviews_profile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/image_profile"
-                    android:layout_alignLeft="@+id/image_figure2"
-                    android:layout_alignStart="@+id/image_figure2"
-                    android:text="192k Reviews"
-                    android:textSize="@dimen/_15ssp" />
-
-                <TextView
-                    android:id="@+id/text_causes_profile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/image_profile"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginLeft="@dimen/_23sdp"
-                    android:layout_marginStart="@dimen/_23sdp"
-                    android:text="268k My causes"
-                    android:textSize="@dimen/_15ssp" />
-
-                <TextView
-                    android:id="@+id/text_location_profile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/image_profile"
-                    android:layout_toEndOf="@+id/username_profile"
-                    android:layout_toRightOf="@+id/username_profile"
-                    android:text="Location"
-                    android:textSize="@dimen/_15ssp" />
-
-                <TextView
-                    android:id="@+id/text_history_profile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/imagefigure4"
-                    android:layout_toLeftOf="@+id/image_profile"
-                    android:layout_toStartOf="@+id/image_profile"
-                    android:text="History"
-                    android:textSize="@dimen/_15ssp" />
-
-                <Button
-                    android:id="@+id/button16"
-                    android:layout_width="@dimen/_50sdp"
-                    android:layout_height="@dimen/_50sdp"
-                    android:layout_alignEnd="@+id/imagefigure4"
-                    android:layout_alignRight="@+id/imagefigure4"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/_50sdp"
-                    android:background="@drawable/add_cause" />
-
-                <Button
-                    android:id="@+id/button18"
-                    android:layout_width="@dimen/_50sdp"
-                    android:layout_height="@dimen/_50sdp"
-                    android:layout_alignLeft="@+id/image_figure2"
-                    android:layout_alignStart="@+id/image_figure2"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/_50sdp"
-                    android:background="@drawable/like_heart" />
-
-            </RelativeLayout>
-        </ScrollView>
-
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
