--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/imageresetpassword"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_10sdp"
         android:src="@drawable/logo"
@@ -48,8 +48,8 @@
     <Button
         android:id="@+id/btn_resetpassword"
         android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_height="@dimen/_75sdp"
+        android:layout_marginBottom="@dimen/_8sdp"
         android:background="@color/colorAccent"
         android:text="Request password reset"
         android:textAllCaps="false"
@@ -62,7 +62,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout5"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_40sdp"
         android:background="#BB000000"
