--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="@dimen/_2sdp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
@@ -88,8 +88,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="0dp"
-            android:layout_marginRight="71dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginRight="@dimen/_71sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/btn_add_cause"
             app:layout_constraintLeft_toRightOf="@+id/image_profile"
@@ -115,10 +115,10 @@
             android:id="@+id/l2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="64dp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:layout_marginLeft="@dimen/_64sdp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/btn_heart"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -144,10 +144,10 @@
             android:id="@+id/l3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="@dimen/_8sdp"
             android:layout_marginLeft="0dp"
-            android:layout_marginRight="71dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginRight="@dimen/_71sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.428"
@@ -174,10 +174,10 @@
             android:id="@+id/l4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:layout_marginLeft="@dimen/_8sdp"
+            android:layout_marginRight="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.28"
