--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -85,7 +85,7 @@
     <Button
         android:id="@+id/btn_changepassword"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="@dimen/_75sdp"
         android:background="@color/colorAccent"
         android:text="Confirm"
         android:textAllCaps="false"
