--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/imagelogin"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_10sdp"
         android:src="@drawable/logo"
@@ -96,8 +96,8 @@
 
     <ImageButton
         android:id="@+id/btn_login"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="@dimen/_75sdp"
+        android:layout_height="@dimen/_75sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:background="@drawable/oragnecircal"
         android:src="@drawable/download_right"
@@ -113,7 +113,7 @@
         android:gravity="center"
         android:text="Don't have ana accounts?Sign Up"
         android:textColor="@color/colorAccent"
-        android:textSize="@dimen/_18ssp"
+        android:textSize="@dimen/_15ssp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
