--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,7 +45,7 @@
             android:layout_marginBottom="@dimen/_5sdp"
             android:drawableLeft="@drawable/usernameimage"
             android:drawablePadding="@dimen/_15sdp"
-            android:ems="10"
+            android:background="@null"
             android:gravity="left"
             android:hint="Username"
             android:inputType="textPersonName"
@@ -59,7 +59,7 @@
             android:layout_marginBottom="@dimen/_5sdp"
             android:drawableLeft="@drawable/password"
             android:drawablePadding="@dimen/_15sdp"
-            android:ems="10"
+            android:background="@null"
             android:gravity="left"
             android:hint="Password"
             android:inputType="textPassword"
@@ -73,7 +73,7 @@
             android:layout_marginBottom="@dimen/_5sdp"
             android:drawableLeft="@drawable/message"
             android:drawablePadding="@dimen/_15sdp"
-            android:ems="10"
+            android:background="@null"
             android:gravity="left"
             android:hint="Email"
             android:inputType="textEmailAddress"
