--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -79,9 +79,9 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
             android:drawableLeft="@drawable/message"
             android:drawablePadding="@dimen/_15sdp"
-            android:ems="10"
             android:gravity="left"
             android:hint="Enter your email"
             android:inputType="textEmailAddress"
