--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -9,13 +9,11 @@
 
     <ImageView
         android:id="@+id/imagechangetpassword"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_gravity="center"
         android:src="@drawable/logo"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/_10sdp" />
@@ -35,17 +33,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         android:layout_marginTop="@dimen/_8sdp"
-        app:layout_constraintTop_toBottomOf="@+id/imagechangetpassword" />
+        app:layout_constraintTop_toBottomOf="@+id/imagechangetpassword"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#BB000000"
         android:orientation="vertical"
-        android:padding="@dimen/_16sdp"
-        android:layout_marginRight="0dp"
+        android:padding="@dimen/_8sdp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/linearLayout2"
         android:layout_marginTop="@dimen/_20sdp"
@@ -60,7 +58,7 @@
             android:layout_marginBottom="@dimen/_5sdp"
             android:drawableLeft="@drawable/password"
             android:drawablePadding="@dimen/_15sdp"
-            android:ems="10"
+            android:background="@null"
             android:gravity="left"
             android:hint="New password"
             android:inputType="textPassword"
@@ -74,7 +72,7 @@
             android:layout_marginBottom="@dimen/_5sdp"
             android:drawableLeft="@drawable/_eye"
             android:drawablePadding="@dimen/_15sdp"
-            android:ems="10"
+            android:background="@null"
             android:gravity="left"
             android:hint="Confirm password"
             android:inputType="textPassword"
@@ -84,8 +82,8 @@
 
     <Button
         android:id="@+id/btn_changepassword"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_75sdp"
+        android:layout_width="0dp"
+        android:layout_height="90dp"
         android:background="@color/colorAccent"
         android:text="Confirm"
         android:textAllCaps="false"
@@ -94,7 +92,6 @@
         android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.0" />
 
