--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -77,7 +77,7 @@
             android:layout_marginBottom="@dimen/_5sdp"
             android:drawableLeft="@drawable/_eye"
             android:drawablePadding="@dimen/_15sdp"
-            android:ems="10"
+            android:background="@null"
             android:gravity="left"
             android:hint="Enter your confirm code"
             android:inputType="text"
