--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
             android:layout_marginBottom="@dimen/_5sdp"
             android:drawableLeft="@drawable/usernameimage"
             android:drawablePadding="@dimen/_15sdp"
-            android:ems="10"
+            android:background="@null"
             android:gravity="left"
             android:hint="User name"
             android:inputType="textPersonName"
@@ -70,7 +70,7 @@
             android:layout_marginBottom="@dimen/_5sdp"
             android:drawableLeft="@drawable/password"
             android:drawablePadding="@dimen/_15sdp"
-            android:ems="10"
+            android:background="@null"
             android:gravity="left"
             android:hint="Password"
             android:inputType="textPassword"
