kolo done le7d delo2ty m3ada el messages msh bytala3 el toast !

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,11 @@
             android:inputType="textPersonName"
             android:padding="@dimen/_15sdp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/tab_enable" />
+
         <EditText
             android:id="@+id/txtpasswordlogin"
             android:layout_width="match_parent"
