--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -51,6 +51,11 @@
             android:inputType="textPersonName"
             android:padding="@dimen/_15sdp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/tab_enable" />
+
         <EditText
             android:id="@+id/txtpasswordregister"
             android:layout_width="match_parent"
@@ -64,6 +69,11 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:padding="@dimen/_15sdp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/tab_enable" />
 
         <EditText
             android:id="@+id/txtemailregister"
