--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,10 +8,9 @@
     tools:context="com.example.amr.sunbula.Fragment.HomeFragment">
 
     <ListView
-        android:id="@+id/list_item"
+        android:id="@+id/list_item_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/appBarLayout"
         android:scrollbars="none" />
 
 </RelativeLayout>
