--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -12,11 +12,11 @@
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_10sdp"
         android:src="@drawable/logo"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/_10sdp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textchangepassword"
@@ -24,29 +24,29 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/imagechangetpassword"
         android:layout_gravity="center"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_marginRight="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:text="Change password"
         android:textColor="#ffffff"
         android:textSize="@dimen/_30ssp"
-        android:layout_marginRight="@dimen/_8sdp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="@dimen/_8sdp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
-        android:layout_marginTop="@dimen/_8sdp"
-        app:layout_constraintTop_toBottomOf="@+id/imagechangetpassword"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:layout_marginEnd="@dimen/_8sdp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imagechangetpassword" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_20sdp"
         android:background="#BB000000"
         android:orientation="vertical"
         android:padding="@dimen/_8sdp"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/linearLayout2"
-        android:layout_marginTop="@dimen/_20sdp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textchangepassword">
 
         <EditText
@@ -56,13 +56,18 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
             android:drawableLeft="@drawable/password"
             android:drawablePadding="@dimen/_15sdp"
-            android:background="@null"
             android:gravity="left"
             android:hint="New password"
             android:inputType="textPassword"
             android:padding="@dimen/_15sdp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/tab_enable" />
 
         <EditText
             android:id="@+id/txtconfirmpass"
@@ -70,9 +75,9 @@
             android:layout_height="@dimen/_50ssp"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@null"
             android:drawableLeft="@drawable/_eye"
             android:drawablePadding="@dimen/_15sdp"
-            android:background="@null"
             android:gravity="left"
             android:hint="Confirm password"
             android:inputType="textPassword"
@@ -84,14 +89,14 @@
         android:id="@+id/btn_changepassword"
         android:layout_width="0dp"
         android:layout_height="90dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:background="@color/colorAccent"
         android:text="Confirm"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/_10sdp"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.0" />
 
