--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -5,13 +5,10 @@
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.Fragment.MessagesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/tab3"
-        android:textColor="#ffffff"
-        android:textSize="@dimen/_30ssp" />
+    <ListView
+        android:id="@+id/list_item_messages"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none" />
 
 </RelativeLayout>
